# real-world-haskell

./: .gitignore  README.md
ch05/: LICENSE  mypretty.cabal
ch05/app/: Main.hs
ch05/src/: Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs
ch05/test/: QC.hs
ch06/: JSONClass.hs
ch07/: actions.hs  actions2.hs  basicio-nodo.hs  basicio.hs  buffering.hs  callingpure.hs  input.txt  return3.hs  tempfile.hs  toupper-imp.hs  toupper-lazy2.hs  toupper-lazy6.hs
ch08/: ElfMagic.hs  Glob.hs  GlobRegex.hs  HighestClose.hs  Useful.hs
ch09/: BetterPredicate.hs  ControlledVisit.hs  FoldDir.hs  RecursiveContents.hs  SimpleFinder.hs
ch10/: PNM.hs  Parse.hs  TreeMap.hs
ch11/: Arbitrary.hs  QC-basics.hs  QC.hs
ch12/: Barcode.hs  Parse.hs  barcode1.ppm  barcode2.ppm
ch13/: DList.hs  Monoid.hs  buildmap.hs  funcrecs.hs  funcrecs2.hs  num.hs  numsimple.hs  passwd-al.hs  passwdmap.hs
ch14/: Carrier.hs  CartesianProduct.hs  Logger.hs  MultiplyTo.hs  Random.hs  SimpleState.hs  State.hs
ch15/: HandleIO.hs  MonadHandle.hs  MonadHandleIO.hs  MonadPlus.hs  MovieReview.hs  RandomGolf.hs  SafeHello.hs  Supply.hs  SupplyClass.hs  SupplyInstance.hs  VCard.hs  WriterIO.hs
ch16/: FormApp.hs  FormParse.hs  HTTPRequestParser.hs  JSONParsec.hs  csv1.hs  csv3.hs  csv4.hs  csv5.hs  csv6.hs  csv7.hs  csv8.hs  csv9.hs
ch17/: Enum1.hs  PCRE-compile.hs  Regex.hs  Regex.hsc  RegexExec.hs  SimpleFFI.hs
ch18/: CountEntriesT.hs  MTComposition.hs  MaybeT.hs  MaybeTParse.hs  StackStack.hs  UglyStack.hs
ch19/: ParseInt.hs  divby1.hs  divby2m.hs  divby3.hs  divby4.hs  divby5.hs  divby6.hs  divby7.hs  divby8.hs  dynexc.hs  errorhandling.hs  hj1.hs  safetail.hs  toupper-impch20.hs
ch20/: RunProcess.hs  RunProcessSimple.hs  posixtime.hs
ch21/: query.hs
ch22/: LICENSE  Pod.cabal  stack.yaml
ch22/src/: PodMain.hs  PodParser.hs
ch23/: Pod.cabal
ch23/data/: podresources.glade
ch23/src/: PodCabalMain.hs  PodDB.hs  PodDownload.hs  PodMainGUI.hs  PodTypes.hs
ch24/: CommonURLs.hs  Compressor.hs  LineChunks.hs  LineCount.hs  LockHierarchy.hs  MapReduce.hs  NiceFork.hs  PCRECompile.hs  ParMap.hs  Regex.hs  RegexExec.hs  SortMain.hs  Sorting.hs  Strat.hs
ch25/: A.hs  B.hs  C.hs  D.hs  E.hs  F.hs  Foldl.hs  G.hs  H.hs  I.hs
