name:                mypretty
version:             0.1.0.0
synopsis:            My pretty printing library, with JSON support
description:         A simple pretty-printing library that illustrates how to
                     develop a Haskell library.
homepage:            https://github.com/peterdmv/real-world-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Real World Haskell
maintainer:          peterdmv@users.noreply.github.com
copyright:           2016 Péter Dimitrov
category:            Learning Haskell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prettify
                       PrettyJSON
                       SimpleJSON
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mypretty
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mypretty
  default-language:    Haskell2010

test-suite mypretty-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             QC.hs
  build-depends:       base
                     , mypretty
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/peterdmv/real-world-haskell
