name:                Pod
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/peterdmv/real-world-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Real World Haskell
maintainer:          peterdmv@users.noreply.github.com
copyright:           2017 Péter Dimitrov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:          data/podresources.glade

executable pod
  hs-source-dirs:      src
  main-is:             PodCabalMain.hs
  other-modules:       PodDB
                     , PodDownload
                     , PodMainGUI
                     , PodParser
                     , PodTypes
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gtk
                     , HaXml
                     , HTTP
                     , HDBC
                     , HDBC-sqlite3
                     , network
                     , network-uri
